--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ h1 {
     justify-content: space-between;
     margin-bottom: 20px;
     padding:10px;
-    border: 5px solid #FFFF00; /* Bright yellow border */
+    border: 5px solid #FFFF00; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
 }
 
@@ -65,14 +65,24 @@ h1 {
     height: 0; 
     padding-bottom: 10%; 
     box-sizing: border-box;
+    position: relative;
+    background-color: #000;
+    position: relative;
+}
+
+.pellet {
+    width: 30%;
+    height: 30%;
+    background-color: #00CED1; 
+    border-radius: 50%;
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
 }
 
 .wall {
     background-color: #0000FF;
-}
-
-.pellet {
-    background-color: green; 
 }
 
 .path {
