--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@ h1 {
     margin-bottom: 10px;
     padding: 8px;
     border: 3px solid #FFFF00;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);*/
 }
 
 #score, #lives {
@@ -53,7 +52,6 @@ h1 {
     width: 85vmin;
     height: 85vmin;
     border: 3px solid #FFFF00;
-    /*box-shadow: 0 4px 12px rgba(230, 7, 7, 0.7);*/
 }
 
 #grid {
@@ -74,6 +72,17 @@ h1 {
     width: 25%;
     height: 25%;
     background-color: #00CED1;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.power-pellet {
+    width: 40%;
+    height: 40%;
+    background-color: #FFA500;
     border-radius: 50%;
     position: absolute;
     top: 50%;
