--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,19 @@ h1 {
     align-items: center;
     justify-content: center;
     text-shadow: 2px 2px 0 #000000, 4px 4px 0 #FFFF00;
+    font-family: 'Press Start 2P', cursive;
     font-size: 2vw;
+    margin: 10px 0;
+}
+
+h2 {
+    color: #FFFF00;
+    text-shadow: 1px 1px 0 #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Bangers", system-ui;
+    font-size: 1.5vw;
     margin: 10px 0;
 }
 
@@ -36,6 +48,8 @@ h1 {
     margin-bottom: 10px;
     padding: 8px;
     border: 3px solid #FFFF00;
+    font-family: 'Press Start 2P', cursive;
+
 }
 
 #score, #lives {
@@ -43,6 +57,8 @@ h1 {
     font-size: 1.2vw;
     line-height: 1.2;
 }
+
+
 
 #grid-container {
     display: flex;
@@ -62,8 +78,8 @@ h1 {
 }
 
 .cell {
-    flex: 0 0 5%; 
-    height: 5%; 
+    flex: 0 0 5%;
+    height: 5%;
     position: relative;
     background-color: #000;
 }
@@ -108,8 +124,12 @@ h1 {
     border-radius: 50%;
 }
 
-.ghost {
+.chaser-ghost {
     background-color: #FF0000;
     border-radius: 50%;
 }
 
+.ambusher-ghost {
+    background-color: magenta;
+    border-radius: 50%;
+}
