Added a third (random) ghost that uses math.random to move across the grid whack-a-mole style

--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,8 @@ h2 {
     background-color: magenta;
     border-radius: 50%;
 }
+
+.random-ghost {
+    background-color: #FFA500;
+    border-radius: 50%;
+}
