--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,11 @@ html {
 @media screen and (min-width: 769px) and (max-width: 1366px) {
   body {
     align-items: center;
-    padding: 20px 0 40px 0;
   }
   .arcade-machine {
     transform: scale(0.85);
     margin: auto;
+    margin-bottom: 40px;
   }
 }
 
